--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="Caleb Flosky's Website">
     <meta name="keywords" content="Game Design, Portfolio, MSU">
     <meta name="author" content="Caleb Flosky">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
     <!-- Link to the external CSS file -->
     <link rel="stylesheet" type="text/css" href="CSS/style.css">
@@ -31,7 +31,7 @@
     </h1>
 
     <div class="container">
-        <a class="link left" href="resume.html" target="_self" title="My itch.io Page">
+        <a class="link" href="resume.html" target="_self" title="My itch.io Page">
             Resume
         </a>
 
@@ -39,11 +39,10 @@
             Portfolio
         </a>
 
-        <a class="link right" href="projects.html" target="_self" title="My itch.io Page">
+        <a class="link" href="projects.html" target="_self" title="My itch.io Page">
             About
         </a>
     </div>
-
 </body>
 
 </html>
