--- a/portfolio.html
+++ b/portfolio.html
@@ -5,7 +5,7 @@
     <meta name="description" content="Portfolio">
     <meta name="keywords" content="Game Design, Portfolio, MSU">
     <meta name="author" content="Caleb Flosky">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     
     <title>Portfolio</title>
     
