--- a/resume.html
+++ b/resume.html
@@ -6,7 +6,7 @@
     <meta name="description" content="Resume">
     <meta name="keywords" content="Game Design, Portfolio, MSU">
     <meta name="author" content="Caleb Flosky">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     
     <title>Resume</title>
     
