--- a/index.html
+++ b/index.html
@@ -1,20 +1,23 @@
 <!DOCTYPE html>
-<html>
-
+<html lang="en">
 <head>
-    <title>Caleb Flosky</title>
     <meta charset="UTF-8">
     <meta name="description" content="Caleb Flosky's Website">
     <meta name="keywords" content="Game Design, Portfolio, MSU">
     <meta name="author" content="Caleb Flosky">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-
+    <title>Caleb Flosky</title>
     <!-- Link to the external CSS file -->
     <link rel="stylesheet" type="text/css" href="CSS/style.css">
+    <style>
+        /* Add CSS for extending the page length */
+        .page-extension {
+            height: 100vh; /* Adjust the height as needed */
+        }
+    </style>
 </head>
-
 <body>
-    <!-- This is a comment much like "//" -->
+    <!-- Your existing content here -->
     <h1 id="name">
         <span style="--delay: 0s;">C</span>
         <span style="--delay: 0.2s;">a</span>
@@ -31,7 +34,7 @@
     </h1>
 
     <div class="container">
-        <a class="link" href="resume.html" target="_self" title="My itch.io Page">
+        <a class="link left" href="resume.html" target="_self" title="My itch.io Page">
             Resume
         </a>
 
@@ -39,10 +42,12 @@
             Portfolio
         </a>
 
-        <a class="link" href="projects.html" target="_self" title="My itch.io Page">
+        <a class="link right" href="projects.html" target="_self" title="My itch.io Page">
             About
         </a>
     </div>
-</body>
 
+    <!-- Page extension element to increase length -->
+    <div class="page-extension"></div>
+</body>
 </html>
