--- a/portfolio.html
+++ b/portfolio.html
@@ -69,9 +69,13 @@
             color: inherit;
             display: block;
         }
+
+        /* Add CSS for extending the page length */
+        .page-extension {
+            height: 2000px; /* Adjust the height as needed */
+        }
     </style>
 </head>
-
 <body>
     <h1 id="portfolio_text">
         <span style="--delay: 0s;">P</span>
@@ -174,6 +178,9 @@
         </div>
     </a>
 
+    <!-- Page extension element to increase length -->
+    <div class="page-extension"></div>
+    
     <script>
         // Define arrays of image sources for each game
         var sneakEasyImages = ['images/Sneak Easy/img1.png', 'images/Sneak Easy/img2.png', 'images/Sneak Easy/img3.png'];
