--- a/resume.html
+++ b/resume.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="description" content="Resume">
@@ -35,9 +34,13 @@
                 transform: translateY(0);
             }
         }
+
+        /* Add CSS for extending the page length */
+        .page-extension {
+            height: 100vh; /* Adjust the height as needed */
+        }
     </style>
 </head>
-
 <body>
     <!-- This is a comment much like " Comment Text -->
     <h1 id="resume_text">
@@ -54,6 +57,8 @@
     </a>
     
     <img src="images/Computer Science Resume.png" alt="Computer Science Resume" title="Computer Science Resume" class="resume-image">
-</body>
 
+    <!-- Page extension element to increase length -->
+    <div class="page-extension"></div>
+</body>
 </html>
