--- a/index.html
+++ b/index.html
@@ -14,6 +14,14 @@
         .page-extension {
             height: 100vh; /* Adjust the height as needed */
         }
+
+        /* Media queries for typical device breakpoints */
+        @media screen and (max-width: 576px) {
+            /* Adjust styles for devices with a maximum width of 576px (e.g., phones) */
+            .container {
+                text-align: center; /* Center align the links */
+            }
+        }
     </style>
 </head>
 <body>
