--- a/portfolio.html
+++ b/portfolio.html
@@ -74,6 +74,18 @@
         .page-extension {
             height: 2000px; /* Adjust the height as needed */
         }
+
+        /* Media queries for typical device breakpoints */
+        @media screen and (max-width: 576px) {
+            /* Adjust styles for devices with a maximum width of 576px (e.g., phones) */
+            img.resume-image {
+                max-width: 100%; /* Make the image occupy the full width of the viewport */
+            }
+
+            .page-extension {
+                height: 3000px; /* Increase the height for smaller screens */
+            }
+        }
     </style>
 </head>
 <body>
