--- a/portfolio.html
+++ b/portfolio.html
@@ -106,89 +106,95 @@
     </a>
     
     <!-- First section: Sneak Easy -->
-    <a href="https://spartasoftstudio.itch.io/sneakeasy" class="image-link" target="_blank" title="Sneak Easy's Itch.io">
-        <div class="image-container section-1 fade-in">
-            <div class="image-content">
-                <h2 class="fade-in">Sneak Easy</h2>
-                <p class="date fade-in">Released: April 25th, 2023</p>
-                <div class="image-wrapper">
-                    <img id="sneak-easy-image" alt="Image 1" class="fade-in">
-                </div>
-                <p class="role fade-in">My Role: Player Programming & QTE Programming</p>
-            </div>
-            <div class="image-info fade-in">
-                <p>"Sneak Easy" is a stealth platforming game that I helped develop as part of the programming team at Spartasoft Studio during Spring 2023. This captivating game emphasizes responsive character movement and Quick Time Events (QTEs), offering players an immersive experience as they navigate shadowy levels, outwitting adversaries with their agility and wits. My primary contributions focused on refining the character's movement and implementing exciting QTE moments, making "Sneak Easy" a thrilling adventure to move around in!</p>
-            </div>
+<div class="image-container section-1 fade-in">
+    <div class="image-content">
+        <h2 class="fade-in">Sneak Easy</h2>
+        <p class="date fade-in">Released: April 25th, 2023</p>
+        <div class="image-wrapper">
+            <!-- Wrap the image in a link -->
+            <a href="https://spartasoftstudio.itch.io/sneakeasy" class="image-link" target="_blank" title="Sneak Easy's Itch.io">
+                <img id="sneak-easy-image" alt="Image 1" class="fade-in">
+            </a>
         </div>
-    </a>
+        <p class="role fade-in">My Role: Player Programming & QTE Programming</p>
+    </div>
+    <div class="image-info fade-in">
+        <p>"Sneak Easy" is a stealth platforming game that I helped develop as part of the programming team at Spartasoft Studio during Spring 2023. This captivating game emphasizes responsive character movement and Quick Time Events (QTEs), offering players an immersive experience as they navigate shadowy levels, outwitting adversaries with their agility and wits. My primary contributions focused on refining the character's movement and implementing exciting QTE moments, making "Sneak Easy" a thrilling adventure to move around in!</p>
+    </div>
+</div>
 
-    <!-- Second section: Battle Blobs -->
-    <a href="https://aidanbieber.itch.io/battle-blobs" class="image-link" target="_blank" title="Battle Blobs's Itch.io">
-        <div class="image-container section-2 fade-in">
-            <div class="image-content">
-                <h2 class="fade-in">Battle Blobs</h2>
-                <p class="date fade-in">Released: March 26th, 2023</p>
-                <div class="image-wrapper">
-                    <img id="battle-blobs-image" alt="Image 1" class="fade-in">
-                </div>
-                <p class="role fade-in">My Role: Player Programming & Painting Programming</p>
-            </div>
-            <div class="image-info fade-in">
-                <p>Battle Blobs is a 2D fighting game created during Spartasoft Studio's March 2023 Game Jam in which the theme was: "MESSY". I was part of a six-person team, contributing as a programmer responsible for some character movement and the paint mechanic. In this fast-paced title, players engage in battle with the objective of covering the arena in paint. The player who claims the most paint-covered territory is winner. It served as an exciting test of our skills and creativity, as we aimed to see how far we could push the boundaries of game development within a mere 48 hours.</p>
-            </div>
+<!-- Second section: Battle Blobs -->
+<div class="image-container section-2 fade-in">
+    <div class="image-content">
+        <h2 class="fade-in">Battle Blobs</h2>
+        <p class="date fade-in">Released: March 26th, 2023</p>
+        <div class="image-wrapper">
+            <!-- Wrap the image in a link -->
+            <a href="https://aidanbieber.itch.io/battle-blobs" class="image-link" target="_blank" title="Battle Blobs's Itch.io">
+                <img id="battle-blobs-image" alt="Image 1" class="fade-in">
+            </a>
         </div>
-    </a>
+        <p class="role fade-in">My Role: Player Programming & Painting Programming</p>
+    </div>
+    <div class="image-info fade-in">
+        <p>Battle Blobs is a 2D fighting game created during Spartasoft Studio's March 2023 Game Jam in which the theme was: "MESSY". I was part of a six-person team, contributing as a programmer responsible for some character movement and the paint mechanic. In this fast-paced title, players engage in battle with the objective of covering the arena in paint. The player who claims the most paint-covered territory is winner. It served as an exciting test of our skills and creativity, as we aimed to see how far we could push the boundaries of game development within a mere 48 hours.</p>
+    </div>
+</div>
 
-    <!-- Third section: Tomb for Two -->
-    <a href="https://spartasoftstudio.itch.io/tomb-for-two" class="image-link" target="_blank" title="Tomb for Two's Itch.io">
-        <div class="image-container section-3 fade-in">
-            <div class="image-content">
-                <h2 class="fade-in">Tomb for Two</h2>
-                <p class="date fade-in">Released: December 8th, 2022</p>
-                <div class="image-wrapper">
-                    <img id="tomb-for-two-image" alt="Image 1" class="fade-in">
-                </div>
-                <p class="role fade-in">My Role: Quality Assurance</p>
-            </div>
-            <div class="image-info fade-in">
-                <p>Tomb for Two is a local 2-player dungeon crawler created during Spartasoft Studio's Fall 2022 semester. In this cooperative game, players must work together to escape a pyramid by defeating enemies and solving puzzles. I contributed to the project as part of the Quality Assurance team, where my responsibilities included bug finding, drawing inspiration from similar games, and testing builds. It's an engaging adventure that challenges players' teamwork and problem-solving abilities, offering an immersive experience within the confines of a pyramid.</p>
-            </div>
+<!-- Third section: Tomb for Two -->
+<div class="image-container section-3 fade-in">
+    <div class="image-content">
+        <h2 class="fade-in">Tomb for Two</h2>
+        <p class="date fade-in">Released: December 8th, 2022</p>
+        <div class="image-wrapper">
+            <!-- Wrap the image in a link -->
+            <a href="https://spartasoftstudio.itch.io/tomb-for-two" class="image-link" target="_blank" title="Tomb for Two's Itch.io">
+                <img id="tomb-for-two-image" alt="Image 1" class="fade-in">
+            </a>
         </div>
-    </a>
+        <p class="role fade-in">My Role: Quality Assurance</p>
+    </div>
+    <div class="image-info fade-in">
+        <p>Tomb for Two is a local 2-player dungeon crawler created during Spartasoft Studio's Fall 2022 semester. In this cooperative game, players must work together to escape a pyramid by defeating enemies and solving puzzles. I contributed to the project as part of the Quality Assurance team, where my responsibilities included bug finding, drawing inspiration from similar games, and testing builds. It's an engaging adventure that challenges players' teamwork and problem-solving abilities, offering an immersive experience within the confines of a pyramid.</p>
+    </div>
+</div>
 
-    <!-- Fourth section: Share and Reach -->
-    <a href="https://caleb-flosky.itch.io/share-and-reach" class="image-link" target="_blank" title="Share and Reach's Itch.io">
-        <div class="image-container section-4 fade-in">
-            <div class="image-content">
-                <h2 class="fade-in">Share and Reach</h2>
-                <p class="date fade-in">Released: June 8th, 2021</p>
-                <div class="image-wrapper">
-                    <img id="share-and-reach-image" alt="Image 1" class="fade-in">
-                </div>
-                <p class="role fade-in">My Role: Sole Developer: Programming, Design, Art, Audio</p>
-            </div>
-            <div class="image-info fade-in">
-                <p>Share and Reach is a puzzle game designed for 1-2 players. In this game, you control two square-headed characters with distinct properties, working together to solve a variety of puzzles. Created as my final project in my C# and Game Design Year 2 course in 2021, I took on the role of the sole developer, responsible for programming, art, level design, and everything except the background music. Share and Reach delivers a puzzle-solving experience with its challenging gameplay.</p>
-            </div>
+<!-- Fourth section: Share and Reach -->
+<div class="image-container section-4 fade-in">
+    <div class="image-content">
+        <h2 class="fade-in">Share and Reach</h2>
+        <p class="date fade-in">Released: June 8th, 2021</p>
+        <div class="image-wrapper">
+            <!-- Wrap the image in a link -->
+            <a href="https://caleb-flosky.itch.io/share-and-reach" class="image-link" target="_blank" title="Share and Reach's Itch.io">
+                <img id="share-and-reach-image" alt="Image 1" class="fade-in">
+            </a>
         </div>
-    </a>
+        <p class="role fade-in">My Role: Sole Developer: Programming, Design, Art, Audio</p>
+    </div>
+    <div class="image-info fade-in">
+        <p>Share and Reach is a puzzle game designed for 1-2 players. In this game, you control two square-headed characters with distinct properties, working together to solve a variety of puzzles. Created as my final project in my C# and Game Design Year 2 course in 2021, I took on the role of the sole developer, responsible for programming, art, level design, and everything except the background music. Share and Reach delivers a puzzle-solving experience with its challenging gameplay.</p>
+    </div>
+</div>
 
-    <!-- Fifth section: Worlds Apart -->
-    <a href="https://caleb-flosky.itch.io/worlds-apart" class="image-link" target="_blank" title="Worlds Apart's Itch.io">
-        <div class="image-container section-5 fade-in">
-            <div class="image-content">
-                <h2 class="fade-in">Worlds Apart</h2>
-                <p class="date fade-in">Released: November 20, 2022</p>
-                <div class="image-wrapper">
-                    <img id="worlds-apart-image" alt="Image 1" class="fade-in">
-                </div>
-                <p class="role fade-in">My Role: Animation, Character, Environmental Programmer</p>
-            </div>
-            <div class="image-info fade-in">
-                <p>"Worlds Apart" emerged from Spartasoft's November 2022 Game Jam, featuring themes like "Hello World" and bonus themes such as "Alchemy, Arcane, Potions." This 2D pixel game puts you in control of a stranded bot, crash-landed on a mysterious terrain. Your objective: establish your computer and uncover the hidden power source. Gameplay involves resource collection and crafting at a workbench. My role as a programmer centered on crafting mechanics, animations, character controls, and environmental elements.</p>
-            </div>
+<!-- Fifth section: Worlds Apart -->
+<div class="image-container section-5 fade-in">
+    <div class="image-content">
+        <h2 class="fade-in">Worlds Apart</h2>
+        <p class="date fade-in">Released: November 20, 2022</p>
+        <div class="image-wrapper">
+            <!-- Wrap the image in a link -->
+            <a href="https://caleb-flosky.itch.io/worlds-apart" class="image-link" target="_blank" title="Worlds Apart's Itch.io">
+                <img id="worlds-apart-image" alt="Image 1" class="fade-in">
+            </a>
         </div>
-    </a>
+        <p class="role fade-in">My Role: Animation, Character, Environmental Programmer</p>
+    </div>
+    <div class="image-info fade-in">
+        <p>"Worlds Apart" emerged from Spartasoft's November 2022 Game Jam, featuring themes like "Hello World" and bonus themes such as "Alchemy, Arcane, Potions." This 2D pixel game puts you in control of a stranded bot, crash-landed on a mysterious terrain. Your objective: establish your computer and uncover the hidden power source. Gameplay involves resource collection and crafting at a workbench. My role as a programmer centered on crafting mechanics, animations, character controls, and environmental elements.</p>
+    </div>
+</div>
+
 
     <!-- Page extension element to increase length -->
     <div class="page-extension"></div>
