--- a/index.html
+++ b/index.html
@@ -149,8 +149,7 @@
             Latest Project: "Maybe Mayhem"
         </a>  
         
-        <iframe frameborder="0" src="https://itch.io/embed-upload/9857580?color=000000" allowfullscreen="" width="960" height="560"><a href="https://caleb-flosky.itch.io/maybe-mayhem">Play Maybe Mayhem on itch.io</a></iframe>
-        
+        <iframe frameborder="0" src="https://itch.io/embed-upload/9865471?color=000000" allowfullscreen="" width="960" height="600"><a href="https://caleb-flosky.itch.io/maybe-mayhem">Play Maybe Mayhem on itch.io</a></iframe>        
         <div class="latest-game-info fade-in">
             <p>My Role: Animation, Ragdoll, Level Design, Player Movement Programming <br><br> "Maybe Mayhem" was a project made during the Spartasoft February 2024 Game Jam. During this project, I was in charge of the Animations, Ragdoll, Level Design for the first and third level, and Player Controls. This game follows Free Scavenger's Journey with the goal of jumping and avoiding obstacles that are in his way. This game won "Best Level Design" Award for the Game Jam!</p>
         </div>
@@ -214,7 +213,24 @@
             Home
         </a>
 
-        <!-- First section: Sneak Easy -->
+        <!-- First section: Goose Genie -->
+        <a href="https://spartasoftstudio.itch.io/" class="image-link" target="_blank" title="Goose Genie's Itch.io">
+            <div class="image-container section-3 fade-in">
+                <div class="image-content">
+                    <h2 class="fade-in">Goose Genie</h2>
+                    <p class="date fade-in">Release Date: April 2024</p>
+                    <div class="image-wrapper">
+                        <img id="goose-genie-image" alt="Image 1" class="fade-in">
+                    </div>
+                    <p class="role fade-in">My Role: Programming Director</p>
+                </div>
+                <div class="image-info fade-in">
+                    <p>Goose Genie is an upcoming game developed by Spartasoft Studio, currently in the development phase. As the Programming Director, I am one of the leaders over a club with 70 members, with a specific focus on managing the 20 programmers and facilitating collaboration with other disciplines. This single-player puzzle platformer revolves around a Goose trapped inside a teapot. The Goose is able to switch between different states of matter, each with its own set of unique attributes. Players will navigate through levels, solving puzzles and advancing through the game by using each state.</p>
+                </div>
+            </div>
+        </a>
+
+        <!-- Second section: Sneak Easy -->
         <a href="https://spartasoftstudio.itch.io/sneakeasy" class="image-link" target="_blank" title="Sneak Easy's Itch.io">
             <div class="image-container section-1 fade-in">
                 <div class="image-content">
@@ -231,7 +247,7 @@
             </div>
         </a>
 
-        <!-- Second section: Battle Blobs -->
+        <!-- Third section: Battle Blobs -->
         <a href="https://aidanbieber.itch.io/battle-blobs" class="image-link" target="_blank" title="Battle Blobs's Itch.io">
             <div class="image-container section-2 fade-in">
                 <div class="image-content">
@@ -244,23 +260,6 @@
                 </div>
                 <div class="image-info fade-in">
                     <p>Battle Blobs is a 2D fighting game created during Spartasoft Studio's March 2023 Game Jam in which the theme was: "MESSY". I was part of a six-person team, contributing as a programmer responsible for some character movement and the paint mechanic. In this fast-paced title, players engage in battle with the objective of covering the arena in paint. The player who claims the most paint-covered territory is winner. It served as an exciting test of our skills and creativity, as we aimed to see how far we could push the boundaries of game development within a mere 48 hours.</p>
-                </div>
-            </div>
-        </a>
-
-        <!-- Third section: Tomb for Two -->
-        <a href="https://spartasoftstudio.itch.io/tomb-for-two" class="image-link" target="_blank" title="Tomb for Two's Itch.io">
-            <div class="image-container section-3 fade-in">
-                <div class="image-content">
-                    <h2 class="fade-in">Tomb for Two</h2>
-                    <p class="date fade-in">Released: December 8th, 2022</p>
-                    <div class="image-wrapper">
-                        <img id="tomb-for-two-image" alt="Image 1" class="fade-in">
-                    </div>
-                    <p class="role fade-in">My Role: Quality Assurance</p>
-                </div>
-                <div class="image-info fade-in">
-                    <p>Tomb for Two is a local 2-player dungeon crawler created during Spartasoft Studio's Fall 2022 semester. In this cooperative game, players must work together to escape a pyramid by defeating enemies and solving puzzles. I contributed to the project as part of the Quality Assurance team, where my responsibilities included bug finding, drawing inspiration from similar games, and testing builds. It's an engaging adventure that challenges players' teamwork and problem-solving abilities, offering an immersive experience within the confines of a pyramid.</p>
                 </div>
             </div>
         </a>
@@ -294,7 +293,7 @@
                     <p class="role fade-in">My Role: Animation, Character, Environmental Programmer</p>
                 </div>
                 <div class="image-info fade-in">
-                    <p>"Worlds Apart" emerged from Spartasoft's November 2022 Game Jam, featuring themes like "Hello World" and bonus themes such as "Alchemy, Arcane, Potions." This 2D pixel game puts you in control of a stranded bot, crash-landed on a mysterious terrain. Your objective: establish your computer and uncover the hidden power source. Gameplay involves resource collection and crafting at a workbench. My role as a programmer centered on crafting mechanics, animations, character controls, and environmental elements.</p>
+                    <p>"Worlds Apart" was created during Spartasoft's November 2022 Game Jam, using the theme "Hello World" and bonus themes "Alchemy, Arcane, Potions." This 2D pixel game puts you in control of a stranded bot, crash-landed on a mysterious terrain. Your objective: establish your computer and uncover the hidden power source. Gameplay involves resource collection and crafting at a workbench. My role as a programmer centered on crafting mechanics, animations, character controls, and environmental elements.</p>
                 </div>
             </div>
         </a>
@@ -303,7 +302,7 @@
             // Define arrays of image sources for each game
             var sneakEasyImages = ['images/Sneak Easy/img1.png', 'images/Sneak Easy/img2.png', 'images/Sneak Easy/img3.png'];
             var battleBlobsImages = ['images/Battle Blobs/img1.png', 'images/Battle Blobs/img2.png', 'images/Battle Blobs/img3.png'];
-            var tombForTwoImages = ['images/Tomb For Two/img1.png', 'images/Tomb For Two/img2.png', 'images/Tomb For Two/img3.png'];
+            var gooseGenieImages = ['images/Goose Genie/img1.png', 'images/Goose Genie/img1.png', 'images/Goose Genie/img1.png'];
             var shareAndReachImages = ['images/Share and Reach/img1.png', 'images/Share and Reach/img2.png', 'images/Share and Reach/img3.png'];
             var worldsApartImages = ['images/Worlds Apart/img1.png', 'images/Worlds Apart/img2.png', 'images/Worlds Apart/img3.png'];
 
@@ -317,7 +316,7 @@
             // Set random images for each game
             setRandomImage(sneakEasyImages, 'sneak-easy-image');
             setRandomImage(battleBlobsImages, 'battle-blobs-image');
-            setRandomImage(tombForTwoImages, 'tomb-for-two-image');
+            setRandomImage(gooseGenieImages, 'goose-genie-image');
             setRandomImage(shareAndReachImages, 'share-and-reach-image');
             setRandomImage(worldsApartImages, 'worlds-apart-image');
         </script>
@@ -333,7 +332,7 @@
             // Set random images for each game
             setRandomImage(sneakEasyImages, 'sneak-easy-image');
             setRandomImage(battleBlobsImages, 'battle-blobs-image');
-            setRandomImage(tombForTwoImages, 'tomb-for-two-image');
+            setRandomImage(gooseGenieImages, 'goose-genie-image');
             setRandomImage(shareAndReachImages, 'share-and-reach-image');
             setRandomImage(worldsApartImages, 'worlds-apart-image');
         </script>
