--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
         img.resume-image {
             display: block;
             margin: 35px auto;
-            max-width: 50%; /* Ensure the image doesn't exceed its container */
+            max-width: 70%; /* Ensure the image doesn't exceed its container */
             box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2); /* Add a subtle shadow */
             border: 2px solid #fff; /* Add a white border around the image */
-            filter: brightness(75%); /* Reduce image brightness */
+            filter: brightness(85%); /* Reduce image brightness */
             animation: fade-in 1s ease-in-out; /* Apply fade-in animation */
         }
 
@@ -44,7 +44,7 @@
 
         /* Add a margin to the resume text */
         a#Latest_Project {
-            margin-top: 200px; /* Adjust this value to your preference */
+            margin-top: 80px; /* Adjust this value to your preference */
             margin-bottom: 25px;
         }
 
@@ -145,6 +145,15 @@
                 About
             </a>
         </div>
+
+        <div class="itch-io-container">
+        
+            <a target="_blank" rel="noopener noreferrer" class="link" href="https://caleb-flosky.itch.io/" title="Caleb Flosky's Itch.io">
+                <img src="/images/itchio.png" width="75" height="auto" class="fade-in">
+            </a>
+        
+        </div>
+
         <a id="Latest_Project" href="https://caleb-flosky.itch.io/maybe-mayhem" target="_self" title="Maybe Mayhem" class="link portfolio">
             Latest Project: "Maybe Mayhem"
         </a>  
@@ -196,7 +205,7 @@
         </a>
 
 
-        <img src="images/Computer Science Resume.png" alt="Computer Science Resume" title="Computer Science Resume" class="resume-image">
+        <img src="images/Computer Science Resume 3-7-2024.png" alt="Computer Science Resume" title="Computer Science Resume" class="resume-image">
 
         <h4 id="portfolio_text">
             <span style="--delay: 0s;">P</span>
