--- a/index.html
+++ b/index.html
@@ -157,7 +157,8 @@
         <a id="Latest_Project" href="https://caleb-flosky.itch.io/maybe-mayhem" target="_self" title="Maybe Mayhem" class="link portfolio">
             Latest Game Jam Project: "Maybe Mayhem"
         </a>
-        
+
+        <iframe frameborder="0" src="https://itch.io/embed-upload/11435424?color=000000" allowfullscreen="" width="960" height="600"><a href="https://caleb-flosky.itch.io/maybe-mayhem">Play Maybe Mayhem on itch.io</a></iframe>
         
 
         <div class="latest-game-info fade-in">
