--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
                     </div>
                 </div>
                 <div class="about-me-info fade-in">
-                    <p>Hello! I'm Caleb Flosky, and I'm a passionate sophomore majoring in Computer Science at MSU. As one of the Programming Team Directors at Spartasoft Studio, I'm currently leading the development of Goose Genie, a 2D platformer in which the character changes their state of matter. Video games have always been a big part of my life, and I'm thrilled to be able to contribute to the industry that has given me so much joy. I'm always eager to connect with fellow enthusiasts, so feel free to reach out if you share any of my interests or just want to chat!</p>
+                    <p>Hello! I'm Caleb Flosky, and I'm a passionate Junior majoring in Computer Science at Michigan State University. Currently, I'm enrolled in MI 445 at the MSU Game Design Minor. On top of that, I am a Gameplay Programming at Spartasoft Studio, a Game Design Studio club. At the moment, we're working on a project titled "Grave", a single-player 3D action game inspired by Hades. Video games have always been a big part of my life, and I'm thrilled to be able to contribute to the industry that has given me so much joy. I'm always eager to connect with fellow enthusiasts, so feel free to reach out if you share any of my interests or just want to chat!</p>
                 </div>
             </div>
         </a>
@@ -223,24 +223,41 @@
             Home
         </a>
 
-        <!-- First section: Goose Genie -->
-        <a href="https://spartasoftstudio.itch.io/" class="image-link" target="_blank" title="Goose Genie's Itch.io">
+        <!-- First section: Grave -->
+        <a href="https://spartasoftstudio.itch.io/" class="image-link" target="_blank" title="Spartasoft's Itch.io">
             <div class="image-container section-3 fade-in">
                 <div class="image-content">
-                    <h2 class="fade-in">Goose Genie</h2>
-                    <p class="date fade-in">Release Date: April 2024</p>
+                    <h2 class="fade-in">Grave</h2>
+                    <p class="date fade-in">Release Date: April 2025</p>
                     <div class="image-wrapper">
-                        <img id="goose-genie-image" alt="Image 1" class="fade-in">
+                        <img id="grave-image" alt="Image 1" class="fade-in">
                     </div>
-                    <p class="role fade-in">My Role: Programming Director</p>
+                    <p class="role fade-in">My Role: Gameplay Programming</p>
                 </div>
                 <div class="image-info fade-in">
-                    <p>Goose Genie is an upcoming game developed by Spartasoft Studio, currently in the development phase. As the Programming Director, I am one of the leaders over a club with 70 members, with a specific focus on managing the 20 programmers and facilitating collaboration with other disciplines. This single-player puzzle platformer revolves around a Goose trapped inside a teapot. The Goose is able to switch between different states of matter, each with its own set of unique attributes. Players will navigate through levels, solving puzzles and advancing through the game by using each state.</p>
+                    <p>Grave is an upcoming game developed by Spartasoft Studio, currently in the development phase. As a programmer, my focus is strictly on the gameplay aspect, including the player mechanics and gameplay loop. This single-player experience is a 3D action game inspired by Hades, where players control the Rook, a demonic spawn caught in a dark, medieval conflict between two rival necromancers. The game blends intense combat with strategic choices for an immersive experience.</p>
                 </div>
             </div>
         </a>
 
-        <!-- Second section: Sneak Easy -->
+        <!-- Second section: Market Mayhem -->
+        <a href="https://spartasoftstudio.itch.io/market-mayhem" class="image-link" target="_blank" title="Market Mayhem's Itch.io">
+            <div class="image-container section-5 fade-in">
+                <div class="image-content">
+                    <h2 class="fade-in">Market Mayhem</h2>
+                    <p class="date fade-in">Released: April 23rd, 2024</p>
+                    <div class="image-wrapper">
+                        <img id="market-mayhem-image" alt="Image 1" class="fade-in">
+                    </div>
+                    <p class="role fade-in">My Role: Programming Director, Networking Programmer</p>
+                </div>
+                <div class="image-info fade-in">
+                    <p>"Market Mayhem" is a 3D online multiplayer hide-and-seek game set in diverse locations like a supermarket, warehouse, or parking garage. Players can join as hiders or guards, with up to 8 players per lobby. As the Networking Programmer, I was responsible for the game's networking, including scenes, objects, and pre-game lobbies. Additionally, I was the go-to person for all networking-related questions. The project extended into a second semester, which led to my promotion as Programming Director.</p>
+                </div>
+            </div>
+        </a>
+
+        <!-- Third section: Sneak Easy -->
         <a href="https://spartasoftstudio.itch.io/sneakeasy" class="image-link" target="_blank" title="Sneak Easy's Itch.io">
             <div class="image-container section-1 fade-in">
                 <div class="image-content">
@@ -257,7 +274,7 @@
             </div>
         </a>
 
-        <!-- Third section: Battle Blobs -->
+        <!-- Fourth section: Battle Blobs -->
         <a href="https://aidanbieber.itch.io/battle-blobs" class="image-link" target="_blank" title="Battle Blobs's Itch.io">
             <div class="image-container section-2 fade-in">
                 <div class="image-content">
@@ -274,7 +291,7 @@
             </div>
         </a>
 
-        <!-- Fourth section: Share and Reach -->
+        <!-- Fifth section: Share and Reach -->
         <a href="https://caleb-flosky.itch.io/share-and-reach" class="image-link" target="_blank" title="Share and Reach's Itch.io">
             <div class="image-container section-4 fade-in">
                 <div class="image-content">
@@ -291,30 +308,14 @@
             </div>
         </a>
 
-        <!-- Fifth section: Worlds Apart -->
-        <a href="https://caleb-flosky.itch.io/worlds-apart" class="image-link" target="_blank" title="Worlds Apart's Itch.io">
-            <div class="image-container section-5 fade-in">
-                <div class="image-content">
-                    <h2 class="fade-in">Worlds Apart</h2>
-                    <p class="date fade-in">Released: November 20, 2022</p>
-                    <div class="image-wrapper">
-                        <img id="worlds-apart-image" alt="Image 1" class="fade-in">
-                    </div>
-                    <p class="role fade-in">My Role: Animation, Character, Environmental Programmer</p>
-                </div>
-                <div class="image-info fade-in">
-                    <p>"Worlds Apart" was created during Spartasoft's November 2022 Game Jam, using the theme "Hello World" and bonus themes "Alchemy, Arcane, Potions." This 2D pixel game puts you in control of a stranded bot, crash-landed on a mysterious terrain. Your objective: establish your computer and uncover the hidden power source. Gameplay involves resource collection and crafting at a workbench. My role as a programmer centered on crafting mechanics, animations, character controls, and environmental elements.</p>
-                </div>
-            </div>
-        </a>
 
         <script>
             // Define arrays of image sources for each game
             var sneakEasyImages = ['images/Sneak Easy/img1.png', 'images/Sneak Easy/img2.png', 'images/Sneak Easy/img3.png'];
             var battleBlobsImages = ['images/Battle Blobs/img1.png', 'images/Battle Blobs/img2.png', 'images/Battle Blobs/img3.png'];
-            var gooseGenieImages = ['images/Goose Genie/img1.png', 'images/Goose Genie/img1.png', 'images/Goose Genie/img1.png'];
+            var graveImages = ['images/Grave/img1.png', 'images/Grave/img1.png', 'images/Grave/img1.png'];
             var shareAndReachImages = ['images/Share and Reach/img1.png', 'images/Share and Reach/img2.png', 'images/Share and Reach/img3.png'];
-            var worldsApartImages = ['images/Worlds Apart/img1.png', 'images/Worlds Apart/img2.png', 'images/Worlds Apart/img3.png'];
+            var marketMayhemImages = ['images/Market Mayhem/img1.png', 'images/Market Mayhem/img2.png', 'images/Market Mayhem/img3.png'];
 
             // Function to set a random image source for a given game
             function setRandomImage(gameImages, imageElementId) {
@@ -326,9 +327,9 @@
             // Set random images for each game
             setRandomImage(sneakEasyImages, 'sneak-easy-image');
             setRandomImage(battleBlobsImages, 'battle-blobs-image');
-            setRandomImage(gooseGenieImages, 'goose-genie-image');
+            setRandomImage(graveImages, 'grave-image');
             setRandomImage(shareAndReachImages, 'share-and-reach-image');
-            setRandomImage(worldsApartImages, 'worlds-apart-image');
+            setRandomImage(marketMayhemImages, 'market-mayhem-image');
         </script>
 
         <script>
@@ -342,9 +343,9 @@
             // Set random images for each game
             setRandomImage(sneakEasyImages, 'sneak-easy-image');
             setRandomImage(battleBlobsImages, 'battle-blobs-image');
-            setRandomImage(gooseGenieImages, 'goose-genie-image');
+            setRandomImage(graveImages, 'grave-image');
             setRandomImage(shareAndReachImages, 'share-and-reach-image');
-            setRandomImage(worldsApartImages, 'worlds-apart-image');
+            setRandomImage(marketMayhemImages, 'market-mayhem-image');
         </script>
     </div>
 </body>
