--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
                     </div>
                 </div>
                 <div class="about-me-info fade-in">
-                    <p>Hello! I'm Caleb Flosky, and I'm a passionate Junior majoring in Computer Science at Michigan State University. Currently, I'm enrolled in MI 445 at the MSU Game Design Minor. On top of that, I am a Gameplay Programming at Spartasoft Studio, a Game Design Studio club. At the moment, we're working on a project titled "Grave", a single-player 3D action game inspired by Hades. Video games have always been a big part of my life, and I'm thrilled to be able to contribute to the industry that has given me so much joy. I'm always eager to connect with fellow enthusiasts, so feel free to reach out if you share any of my interests or just want to chat!</p>
+                    <p>Hello! I'm Caleb Flosky, and I'm a passionate Junior majoring in Computer Science at Michigan State University. Currently, I'm enrolled in MI 445 at the MSU Game Design Minor. On top of that, I am a Gameplay Programming at Spartasoft Studio, a Game Design Studio club. We're working on a project titled "Grave", a single-player 3D action game inspired by Hades. Video games have always been a big part of my life, and I'm thrilled to be able to contribute to the industry that has given me so much joy. I'm always eager to connect with fellow enthusiasts, so feel free to reach out!</p>
                 </div>
             </div>
         </a>
