--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <meta name="keywords" content="Game Design, Portfolio, MSU">
     <meta name="author" content="Caleb Flosky">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+    <link rel="icon" href="images/sonic.jpg" type="image/jpg">
 
     <!-- Link to the external CSS file -->
     <link rel="stylesheet" type="text/css" href="CSS/style.css">
