--- a/index.html
+++ b/index.html
@@ -112,6 +112,18 @@
 
 
     </style>
+
+    <script>
+        // Clear all cookies on page load
+        window.onload = function() {
+            const cookies = document.cookie.split("; ");
+            for (let cookie of cookies) {
+                const eqPos = cookie.indexOf("=");
+                const name = eqPos > -1 ? cookie.substr(0, eqPos) : cookie;
+                document.cookie = name + "=; expires=Thu, 01 Jan 1970 00:00:00 UTC; path=/;";
+            }
+        };
+    </script>
     
 </head>
 
