--- a/index.html
+++ b/index.html
@@ -170,6 +170,7 @@
         <a id="Latest_Project" href="https://caleb-flosky.itch.io/miskatonic" target="_self" title="Miskatonic" class="link portfolio">
             Latest Project: "Miskatonic"
         </a>
+        <small class="link-small">Please delete your cookies for this website if incorrect game appears.</small>
 
         <iframe frameborder="0" src="https://itch.io/embed-upload/11863421?color=6b2222&v=1" allowfullscreen="" width="960" height="600">
             <a href="https://caleb-flosky.itch.io/miskatonic">Play Miskatonic on itch.io</a>
