--- a/index.html
+++ b/index.html
@@ -172,7 +172,9 @@
         </a>
         <small class="link-small">Please delete your cookies for this website if incorrect game appears.</small>
 
-        <iframe frameborder="0" src="https://itch.io/embed-upload/11435942?color=000000" allowfullscreen="" width="960" height="600"><a href="https://caleb-flosky.itch.io/maybe-mayhem">Play Maybe Mayhem on itch.io</a></iframe>
+        <iframe frameborder="0" src="https://itch.io/embed-upload/11863421?color=6b2222&v=1" allowfullscreen="" width="960" height="600">
+            <a href="https://caleb-flosky.itch.io/miskatonic">Play Miskatonic on itch.io</a>
+          </iframe>
 
         <div class="latest-game-info fade-in">
             <p>My Role: AI, Camera and Dialogue, Maze, and Player Programming <br><br> "Miskatonic" was a project made in MSU's MI 445 Game Design and Development I class. During this project, I was in charge of the AI, Camera and Dialogue, Maze Generation, and Player Programming. In this game, the player embodies an ancient entity, Labgoroth. Use your powers to manipulate human psyches and cultivate fear. With each move, amplify terror in the AI-controlled humans as they attempt to flee, ultimately allowing Labgoroth to fully manifest once their fear reaches its peak.</p>
