--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
             <div class="image-container myself fade-in">
                 <div class="image-content">
                     <div>
-                        <img src="/images/myself2.jpg" width="400" height="auto" class="fade-in">
+                        <img src="/images/myself2.jpg" id="about-me-photo" class="fade-in">
                     </div>
                 </div>
                 <div class="about-me-info fade-in">
